# Freecodecamp

./: README.md
.github/workflows/: Auto Pull Request and Merge.yml
Data-Analysis-With-Python/Project/Demographic-Data_Analyzer/: README.MD  demographic_data_analyzer.py  pyproject.toml
Data-Analysis-With-Python/Project/Mean-Varience-Std-Calculator/: README.md  mean_var_std.py  pyproject.toml
Data-Analysis-With-Python/Project/Medical_Data_Visualizer/: README.md  test.py
Data-Analysis-With-Python/Project/Page-View-Time-Series-Visualizer/: README.md  time_series_visualizer.py
