[tool.poetry]
name = "demographic-data-analyzer"
version = "0.1.0"
description = ""
authors = ["nithishsingh <nithishsingha@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
